# printers

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  settings.example.yaml  settings.schema.yaml
.github/: dependabot.yaml
.github/workflows/: build-docker.yaml  deploy.yaml  pre-commit.yaml
scripts/: mailing_list.py  send_one_message.py
src/: config.py  config_schema.py  prepare.py
src/api/: __main__.py  app.py  dependencies.py  lifespan.py  logging_.py
src/bot/: __main__.py  api.py  dispatcher.py  entry_filters.py  fsm_data.py  interrupts.py  keyboards.py  logging_.py  middlewares.py  shared_messages.py
src/bot/routers/: copies_setup.py  globals.py  layout_setup.py  pages_setup.py  print.py  printer_choice.py  registration.py  sides_setup.py  tools.py  unauthenticated.py
src/bot/routers/print_settings/: copies_setup.py  layout_setup.py  pages_setup.py  printer_choice.py  printer_setup.py  sides_setup.py
src/bot/routers/printing/: printing.py  printing_states.py  printing_tools.py
src/bot/routers/printing/print_settings/: copies_setup.py  layout_setup.py  pages_setup.py  printer_setup.py  sides_setup.py
src/bot/routers/scanning/: scanning.py  scanning_states.py  scanning_tools.py
src/bot/routers/scanning/scan_settings/: crop_setup.py  mode_setup.py  name_setup.py  quality_setup.py  scanner_setup.py  sides_setup.py
src/modules/: innohassle_accounts.py
src/modules/converting/: repository.py
src/modules/printing/: entity_models.py  repository.py  routes.py
src/modules/scanning/: entity_models.py  repository.py  routes.py
src/modules/scanning/tools/: auto_crop.py  document_merger.py
src/modules/tokens/: repository.py
src/modules/users/: repository.py  routes.py  schemas.py
src/storages/mongo/: users.py
tests/: test_printing_tools.py
typings/: cups.pyi
typings/aiogram/fsm/: context.pyi
