[tool.poetry]
name = "printers"
version = "0.1.0"
description = ""
authors = ["one-zero-eight <https://t.me/one_zero_eight>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
authlib = "^1.4.0"
colorlog = "^6.8.2"
cryptography = "^44.0.0"
fastapi = "^0.115.6"
fastapi-swagger = "^0.2.3"
gunicorn = "^23.0.0"
httpx = "^0.28.1"
pre-commit = "^4.0.1"
pydantic = "^2.10.5"
ruff = "^0.9.2"
uvicorn = "^0.34.0"
pycups = "^2.0.4"
unoserver = "^3.1"
python-multipart = "^0.0.20"

[tool.poetry.group.mongo.dependencies]
beanie = "^1.29.0"
motor = "^3.6.1"

[tool.ruff]
line-length = 120
lint.ignore = [
    # wildcard imports are fine
    "F403",
    "F405",
    "PLR"
]
lint.extend-select = ["I", "UP", "PL"]
target-version = "py312"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
