[project]
name = "printers"
version = "0.1.0"
description = ""
authors = [{ name = "one-zero-eight" }]
urls = { homepage = "https://t.me/one_zero_eight" }
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "authlib>=1.6.5",
    "colorlog>=6.8.2",
    "cryptography>=43.0.1",
    "fastapi>=0.115.0",
    "fastapi-swagger>=0.2.3",
    "gunicorn>=23.0.0",
    "httpx>=0.27.2",
    "pre-commit>=3.8.0",
    "pydantic>=2.9.2",
    "ruff>=0.6.7",
    "uvicorn>=0.31.0",
    "pycups>=2.0.4",
    "unoserver~=3.1",
    "python-multipart>=0.0.20",
    "pyipp>=0.17.0",
    "aiogram>=3.22.0",
    "pypdf2>=3.0.1",
    "beautifulsoup4>=4.13.4",
    "cachetools>=5.5.2",
    "aiogram-media-group>=0.5.1",
    "aiohttp-socks>=0.10.1",
    "docaligner-docsaid>=1.1.0",
    "pymupdf>=1.26.7",
]

[dependency-groups]
dev = ["pytest>=8.3.5"]
mongo = ["beanie>=1.30.0,<2", "motor>=3.6.0,<4"]

[tool.uv]
default-groups = ["mongo"]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415", "PLR"]
exclude = ["*.pyi", "auto_crop.py"]
target-version = "py313"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
stubPath = "typings"
reportMissingImports = true
reportMissingTypeStubs = false
reportOptionalMemberAccess = false
